1st half my bio

--- a/bio.html
+++ b/bio.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My bio</title>
+    <link rel="stylesheet" href="bio.css">
 </head>
 <body>
-    
+    My name is Shanto Chakraborty
+
+    <div id="pic">
+        <h3>Its my PIC:</h3>
+        <img src="pic.jpeg" alt="" height="400px" width="500px">
+    </div>
 </body>
 </html>
